--- a/build.gradle
+++ b/build.gradle
@@ -54,16 +54,29 @@ repositories {
         name = 'jared maven'
         url = 'https://maven.blamejared.com/'
     }
+    maven {
+        name 'tterrag maven'
+        url "https://maven.tterrag.com/"
+    }
+    maven {
+        name = "thiakil"
+        url = "http://maven.thiakil.com"
+    }
+    maven {
+        name = 'hellfirepvp'
+        url = 'https://maven.hellfiredev.net/'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', includes: ['*.jar'])
 
+    compile "vazkii.botania:Botania:r1.10-363.148"
+    compile "com.azanor.baubles:Baubles:1.12-1.5.2"
     compile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.636"
-    compile "CraftTweaker2:CraftTweaker2-API:4.1.20.636"
-    compile "CraftTweaker2:ZenScript:4.1.20.636"
     compile "mezz.jei:jei_1.12.2:4.16.1.302"
-    compile('org.spongepowered:mixin:0.8') {
+    compile 'mcjty.theoneprobe:TheOneProbe-1.12:1.12-1.4.28-17'
+    provided('org.spongepowered:mixin:0.8') {
         exclude module: 'guava'
         exclude module: 'commons-io'
         exclude module: 'gson'
@@ -93,6 +106,10 @@ jar {
                 'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
                 "ForceLoadAsMod": true
         ])
+    }
+
+    from configurations.provided.asFileTree.files.collect {
+        zipTree(it)
     }
 }
 
